[gd_scene load_steps=14 format=3 uid="uid://bqtxd7q5h64p5"]

[ext_resource type="Script" uid="uid://d0534cuw605lk" path="res://src/common/explosion.gd" id="1_482r8"]
[ext_resource type="AudioStream" uid="uid://dwmcbjyt3h00v" path="res://src/common/assets/explosion.wav" id="2_a3q8g"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1gfd7"]
radius = 7.5

[sub_resource type="Curve" id="Curve_1gfd7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.1, 1), 0.0, 0.0, 0, 0, Vector2(0.10001, 1), 0.0, 0.0, 0, 0, Vector2(0.19998, 1), 0.0, 0.0, 0, 0, Vector2(0.19999, 1), 0.0, 0.0, 0, 0, Vector2(0.2, 1), 0.0, 0.0, 0, 0, Vector2(0.8, 0), 0.0, 0.0, 0, 0]
point_count = 7
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_482r8"]
curve = SubResource("Curve_1gfd7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a3q8g"]
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_min = 5.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_482r8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tplty"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.0627451)

[sub_resource type="SphereMesh" id="SphereMesh_8imle"]
material = SubResource("StandardMaterial3D_tplty")

[sub_resource type="Animation" id="Animation_a3q8g"]
resource_name = "explode"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shockwave:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(30, 30, 30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shockwave:mesh:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.21960784), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Smoke:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tplty"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shockwave:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shockwave:mesh:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.21960784)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Smoke:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tplty"]
_data = {
&"RESET": SubResource("Animation_tplty"),
&"explode": SubResource("Animation_a3q8g")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a3q8g"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.21960784)

[sub_resource type="SphereMesh" id="SphereMesh_tplty"]
material = SubResource("StandardMaterial3D_a3q8g")

[node name="Explosion" type="Area3D"]
top_level = true
collision_layer = 3
collision_mask = 3
script = ExtResource("1_482r8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_1gfd7")

[node name="Smoke" type="GPUParticles3D" parent="."]
emitting = false
amount = 20
lifetime = 0.35000000000000003
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_a3q8g")
draw_pass_1 = SubResource("SphereMesh_8imle")

[node name="Sound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_a3q8g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_tplty")
}

[node name="Shockwave" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_tplty")
skeleton = NodePath("../AnimationPlayer")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Smoke" to="." method="_on_smoke_finished"]
[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
